--- a/ENdoSnipe/build.properties
+++ b/ENdoSnipe/build.properties
@@ -1,8 +1,8 @@
 #\u74b0\u5883\u306b\u5408\u308f\u305b\u3066plugins\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u5909\u66f4\u3059\u308b\u3053\u3068\u3002
-eclipse.dir=C:/AcroWorks/Tools/eclipse
-eclipsePlugin.dir=C:/AcroWorks/Tools/eclipse
+eclipse.dir=G:ools/eclipse
+eclipsePlugin.dir=G:/Tools/eclipse
 
 #\u4ee5\u4e0b\u306e\u30d7\u30ed\u30d1\u30c6\u30a3\u306f\u30d3\u30eb\u30c9\u30b9\u30af\u30ea\u30d7\u30c8\u306b\u3088\u3063\u3066\u3001\u81ea\u52d5\u7684\u306bbuild.bat\u304b\u3089\u8ee2\u8a18\u3055\u308c\u307e\u3059
 #\u624b\u4f5c\u696d\u3067\u4fee\u6b63\u3059\u308b\u5fc5\u8981\u306f\u3042\u308a\u307e\u305b\u3093
-version=5.0.0
-build=012
+version=5.0.1
+build=001
