Javelinのメソッド長に上限を設定できるようにした
javelin.invocation.name.limitLength=2048

--- a/Javelin/conf/javelin_monitor.properties
+++ b/Javelin/conf/javelin_monitor.properties
@@ -146,6 +146,9 @@ javelin.traceDepth=30
 javelin.log.mbeaninfo=false
 javelin.log.mbeaninfo.root=false
 
+# メソッド名の最大文字数
+javelin.invocation.name.limitLength=2048
+
 # メソッド呼び出しのルートノードにつける名称
 javelin.rootCallerName=root
 
