--- a/Javelin/conf/javelin.properties
+++ b/Javelin/conf/javelin.properties
@@ -146,6 +146,9 @@ javelin.traceDepth=30
 javelin.log.mbeaninfo=true
 javelin.log.mbeaninfo.root=true
 
+# メソッド名の最大文字数
+javelin.invocation.name.limitLength=2048
+
 # メソッド呼び出しのルートノードにつける名称
 javelin.rootCallerName=root
 
