クラスタ名を指定するプロパティを追加／接頭辞に付与する処理を追加

--- a/Javelin/conf/javelin.properties
+++ b/Javelin/conf/javelin.properties
@@ -54,6 +54,9 @@ javelin.connectHost=localhost
 # BottleneckEye/DataCollectorとの通信に使用するポート番号 (javelin to BottleneckEye)
 javelin.connectPort=19000
 
+# クラスタ名
+javelin.clusterName=default
+
 # DataCollectorのデータベース名。
 javelin.databaseName=endosnipedb
 
