--- a/Javelin/conf/javelin_perf.properties
+++ b/Javelin/conf/javelin_perf.properties
@@ -54,6 +54,9 @@ javelin.connectHost=localhost
 # BottleneckEye/DataCollectorとの通信に使用するポート番号 (javelin to BottleneckEye)
 javelin.connectPort=19000
 
+# クラスタ名
+javelin.clusterName=default
+
 # DataCollectorのデータベース名。
 javelin.databaseName=endosnipedb
 
