ServletJavelinの定義を追加した。

--- a/Javelin/conf/include.conf
+++ b/Javelin/conf/include.conf
@@ -7,6 +7,15 @@
 # Setting for HBase
 [import]modules/HBase.conf
 
+# Settings for HTTP Servlet
+[import]modules/HTTPServlet.conf
+
+# Settings for HTTP Session
+[import]modules/HTTPSession.conf
+
+# Settings for HTTP Servlet(Tomcat)
+[import]modules/TomcatServlet.conf
+
 ############################################################
 # Custom Include
 ############################################################
