--- a/Javelin/conf/javelin.properties
+++ b/Javelin/conf/javelin.properties
@@ -268,4 +268,63 @@ javelin.resource.itemName.prefix=/javelin
 # 計測項目名(ID)に接頭辞を付与しない項目の前方一致パターンリスト
 #javelin.resource.itemName.noPrefixList=/hdfs,/mapreduce
 
+
+
+################################################################################
+# JDBC Javelin Configurations
+################################################################################
+
+#--------------------------------------------------
+# JDBCJavelinに関する共通設定
+#--------------------------------------------------
+
+# JDBCの監視を行うかどうか
+javelin.jdbc.enable=true
+
+# バインド変数の値を記録する。
+javelin.jdbc.recordBindVal=false
+
+# ネストしたJDBCドライバクラスの呼び出しを、全てログ出力する。
+javelin.jdbc.recordDuplJdbcCall=false
+
+# 記録するSQLの文字列長さの上限。
+javelin.jdbc.stringLimitLength=102400
+
+# 同一トランザクション内の同一SQL呼び出し回数超過を監視するかどうか
+javelin.jdbc.sqlcount.monitor=true
+
+# 同一トランザクション内の同一SQL呼び出し回数超過の閾値
+# javelin.jdbc.sqlcount.monitor=true のときに有効
+javelin.jdbc.sqlcount=50
+
+# JDBCJavelinでスタックトレースを出力するかどうか。
+javelin.jdbc.record.stackTrace=false
+
+# JDBCJavelinでスタックトレースを出力するための閾値
+javelin.jdbc.record.stacktraceThreashold=100
+
+#--------------------------------------------------
+# 実行計画取得に関する設定
+#--------------------------------------------------
+
+# 実行計画を取得するかどうか。
+javelin.jdbc.recordExecPlan=true
+
+# SQLの実行時間が以下の時間を超過した場合に、実行計画を取得する。(単位:ミリ秒)
+javelin.jdbc.execPlanThreshold=100
+
+# 実行計画取得の間隔(ms)。
+javelin.jdbc.planInterval=86400000
+
+
+#--------------------------------------------------
+# 各種DBMS固有の設定
+#--------------------------------------------------
+
+# セッション単位にOracle SQLトレースを出力させる。
+javelin.jdbc.oracle.allowSqlTrace=false
+
+# PostgreSQLに詳細な実行計画を出力させる。
+javelin.jdbc.postgres.verbosePlan=false
+
 # End of javelin.properties ####################################################
