--- a/Javelin/conf/escaped/javelin.properties
+++ b/Javelin/conf/escaped/javelin.properties
@@ -54,6 +54,9 @@ javelin.connectHost=localhost
 # BottleneckEye/DataCollector\u3068\u306e\u901a\u4fe1\u306b\u4f7f\u7528\u3059\u308b\u30dd\u30fc\u30c8\u756a\u53f7 (javelin to BottleneckEye)
 javelin.connectPort=19000
 
+# \u30af\u30e9\u30b9\u30bf\u540d
+javelin.clusterName=default
+
 # DataCollector\u306e\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u540d\u3002
 javelin.databaseName=endosnipedb
 
@@ -146,6 +149,9 @@ javelin.traceDepth=30
 javelin.log.mbeaninfo=true
 javelin.log.mbeaninfo.root=true
 
+# \u30e1\u30bd\u30c3\u30c9\u540d\u306e\u6700\u5927\u6587\u5b57\u6570
+javelin.invocation.name.limitLength=2048
+
 # \u30e1\u30bd\u30c3\u30c9\u547c\u3073\u51fa\u3057\u306e\u30eb\u30fc\u30c8\u30ce\u30fc\u30c9\u306b\u3064\u3051\u308b\u540d\u79f0
 javelin.rootCallerName=root
 
@@ -185,7 +191,7 @@ javelin.recordStrategy=jp.co.acroquest.endosnipe.javelin.record.CpuTimeRecordStr
 javelin.alarmListeners=
 
 # BottleneckEye\u304b\u3089\u96fb\u6587\u3092\u53d7\u4fe1\u3057\u305f\u969b\u306e\u51e6\u7406\u3092\u62e1\u5f35\u3059\u308b\u30ea\u30b9\u30ca
-javelin.telegramListeners=jp.co.acroquest.endosnipe.javelin.communicate.GetRequestTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.ResetRequestTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.JvnLogDownloadTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.JvnLogListTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.SystemResourceTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.UpdateRequestTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.GetPropertyRequestTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.TargetSetTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.GetDumpTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.RemoveClassTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.FunctionCallTelegramListener
+javelin.telegramListeners=jp.co.acroquest.endosnipe.javelin.communicate.GetRequestTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.ResetRequestTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.JvnLogDownloadTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.JvnLogListTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.SystemResourceTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.UpdateRequestTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.GetPropertyRequestTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.TargetSetTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.telegram.RemoveClassTelegramListener,jp.co.acroquest.endosnipe.javelin.communicate.FunctionCallTelegramListener
 
 
 #--------------------------------------------------
@@ -261,5 +267,64 @@ javelin.resource.itemName.prefix=/javelin
 
 # \u8a08\u6e2c\u9805\u76ee\u540d(ID)\u306b\u63a5\u982d\u8f9e\u3092\u4ed8\u4e0e\u3057\u306a\u3044\u9805\u76ee\u306e\u524d\u65b9\u4e00\u81f4\u30d1\u30bf\u30fc\u30f3\u30ea\u30b9\u30c8
 #javelin.resource.itemName.noPrefixList=/hdfs,/mapreduce
+
+
+
+################################################################################
+# JDBC Javelin Configurations
+################################################################################
+
+#--------------------------------------------------
+# JDBCJavelin\u306b\u95a2\u3059\u308b\u5171\u901a\u8a2d\u5b9a
+#--------------------------------------------------
+
+# JDBC\u306e\u76e3\u8996\u3092\u884c\u3046\u304b\u3069\u3046\u304b
+javelin.jdbc.enable=true
+
+# \u30d0\u30a4\u30f3\u30c9\u5909\u6570\u306e\u5024\u3092\u8a18\u9332\u3059\u308b\u3002
+javelin.jdbc.recordBindVal=false
+
+# \u30cd\u30b9\u30c8\u3057\u305fJDBC\u30c9\u30e9\u30a4\u30d0\u30af\u30e9\u30b9\u306e\u547c\u3073\u51fa\u3057\u3092\u3001\u5168\u3066\u30ed\u30b0\u51fa\u529b\u3059\u308b\u3002
+javelin.jdbc.recordDuplJdbcCall=false
+
+# \u8a18\u9332\u3059\u308bSQL\u306e\u6587\u5b57\u5217\u9577\u3055\u306e\u4e0a\u9650\u3002
+javelin.jdbc.stringLimitLength=102400
+
+# \u540c\u4e00\u30c8\u30e9\u30f3\u30b6\u30af\u30b7\u30e7\u30f3\u5185\u306e\u540c\u4e00SQL\u547c\u3073\u51fa\u3057\u56de\u6570\u8d85\u904e\u3092\u76e3\u8996\u3059\u308b\u304b\u3069\u3046\u304b
+javelin.jdbc.sqlcount.monitor=true
+
+# \u540c\u4e00\u30c8\u30e9\u30f3\u30b6\u30af\u30b7\u30e7\u30f3\u5185\u306e\u540c\u4e00SQL\u547c\u3073\u51fa\u3057\u56de\u6570\u8d85\u904e\u306e\u95be\u5024
+# javelin.jdbc.sqlcount.monitor=true \u306e\u3068\u304d\u306b\u6709\u52b9
+javelin.jdbc.sqlcount=50
+
+# JDBCJavelin\u3067\u30b9\u30bf\u30c3\u30af\u30c8\u30ec\u30fc\u30b9\u3092\u51fa\u529b\u3059\u308b\u304b\u3069\u3046\u304b\u3002
+javelin.jdbc.record.stackTrace=false
+
+# JDBCJavelin\u3067\u30b9\u30bf\u30c3\u30af\u30c8\u30ec\u30fc\u30b9\u3092\u51fa\u529b\u3059\u308b\u305f\u3081\u306e\u95be\u5024
+javelin.jdbc.record.stacktraceThreashold=100
+
+#--------------------------------------------------
+# \u5b9f\u884c\u8a08\u753b\u53d6\u5f97\u306b\u95a2\u3059\u308b\u8a2d\u5b9a
+#--------------------------------------------------
+
+# \u5b9f\u884c\u8a08\u753b\u3092\u53d6\u5f97\u3059\u308b\u304b\u3069\u3046\u304b\u3002
+javelin.jdbc.recordExecPlan=true
+
+# SQL\u306e\u5b9f\u884c\u6642\u9593\u304c\u4ee5\u4e0b\u306e\u6642\u9593\u3092\u8d85\u904e\u3057\u305f\u5834\u5408\u306b\u3001\u5b9f\u884c\u8a08\u753b\u3092\u53d6\u5f97\u3059\u308b\u3002(\u5358\u4f4d:\u30df\u30ea\u79d2)
+javelin.jdbc.execPlanThreshold=100
+
+# \u5b9f\u884c\u8a08\u753b\u53d6\u5f97\u306e\u9593\u9694(ms)\u3002
+javelin.jdbc.planInterval=86400000
+
+
+#--------------------------------------------------
+# \u5404\u7a2eDBMS\u56fa\u6709\u306e\u8a2d\u5b9a
+#--------------------------------------------------
+
+# \u30bb\u30c3\u30b7\u30e7\u30f3\u5358\u4f4d\u306bOracle SQL\u30c8\u30ec\u30fc\u30b9\u3092\u51fa\u529b\u3055\u305b\u308b\u3002
+javelin.jdbc.oracle.allowSqlTrace=false
+
+# PostgreSQL\u306b\u8a73\u7d30\u306a\u5b9f\u884c\u8a08\u753b\u3092\u51fa\u529b\u3055\u305b\u308b\u3002
+javelin.jdbc.postgres.verbosePlan=false
 
 # End of javelin.properties ####################################################
