データベース名を指定するプロパティをcollector.propertiesに追加

--- a/ENdoSnipeDataCollector/conf/collector.properties
+++ b/ENdoSnipeDataCollector/conf/collector.properties
@@ -14,6 +14,9 @@ database.host=localhost
 # Database port number ( valid only postgres )
 database.port=5432
 
+# Database Name
+database.name=endosnipedb
+
 # Database login user name ( valid only postgres )
 database.username=postgres
 
