noPrefixListプロパティのデフォルト値を追加

--- a/Javelin/conf/javelin.properties
+++ b/Javelin/conf/javelin.properties
@@ -261,13 +261,11 @@ javelin.resource.collectHadoopAgentResources=false
 # HBaseAgentのリソースデータを取得するかどうか
 javelin.resource.collectHBaseAgentResources=false
 
-
 # 計測項目名(ID)の接頭辞にする文字列
 javelin.resource.itemName.prefix=/javelin
 
 # 計測項目名(ID)に接頭辞を付与しない項目の前方一致パターンリスト
-#javelin.resource.itemName.noPrefixList=/hdfs,/mapreduce
-
+#javelin.resource.itemName.noPrefixList=/hdfs,/mapreduce,/hdfs
 
 
 ################################################################################
